--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     <canvas id="myCanvas" width="980" height="500"></canvas>
     <button id="btn">Choose Random Point</button>
     <p id="triangleText"></p>
+    <div id="question"></div>
+    <div id="answers"></div>
     <script src="script.js"></script>
 </body>
 </html>
