--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
     <p id="triangleText"></p>
     <div id="question"></div>
     <div id="answers"></div>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
