--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Dibujar un triángulo equilátero y segmentos para el centroide, puntos medios y segmentos adicionales</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Triangle Decision Tool</title>
     <style>
-        canvas {
-            border: 1px solid black;
-            display: block;
+        /* Basic styling for buttons */
+        .answer-btn {
+            padding: 10px 10px; /* uniform padding around the text */
+            margin: 5px;
+            width: 90%;
+            background-color: #f8f8f8;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: left; /* align text to the left */
+            box-sizing: border-box; /* include padding and border in the width */
+        }
+        .answer-btn:hover {
+            background-color: #e9e9e9;
+        }
+        #answers ul {
+            padding-left: 20px; /* keeps bullet points indented slightly */
+        }
+        #answers li {
+            margin: 0;
+            padding: 0;
+            text-indent: 0;
         }
     </style>
 </head>
 <body>
-    <canvas id="myCanvas" width="980" height="500"></canvas>
-    <button id="btn">Choose Random Point</button>
-    <p id="triangleText"></p>
+    <canvas id="myCanvas" width="800" height="450" style="border:1px solid #d3d3d3;"></canvas>
     <div id="question"></div>
     <div id="answers"></div>
+    <div id="triangleText"></div>
     <script src="./js/script.js"></script>
 </body>
 </html>
