--- a/src_questionnaire/index_questionnaire.html
+++ b/src_questionnaire/index_questionnaire.html
@@ -35,6 +35,6 @@
     <div id="question"></div>
     <div id="answers"></div>
     <div id="triangleText"></div>
-    <script src="./js/script.js"></script>
+    <script src="script_questionnaire.js"></script>
 </body>
 </html>
